# public/swagger.json
@@ -45,7 +45,39 @@ paths:
             $ref: "#/definitions/UserModel"
         400:
           description: "Bad Request"
- 
+  /v1/sign-in:
+    post:
+      tags:
+      - "Auth"
+      summary: "Authenticate user"
+      description: "This for authenticate users."
+      operationId: "authUser"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "formData"
+        name: "email"
+        description: "User email"
+        required: true
+        type: string
+        format: email
+        example: "claudio@example.com"
+      - in: "formData"
+        name: "password"
+        description: "User password"
+        required: true
+        type: string
+        minValue: 8
+        example: "123456789"
+        format: password
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Token"
+        404:
+          description: "User not found"
+         
 definitions:
   Auth:
     properties:
